<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/name_text"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/name_input_explain" android:hint="@string/name_hint"
            android:maxLength="15"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_button" android:text="@string/add" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/name_text"/>
    <TextView
            android:text="@string/addName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name_input_explain"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="395dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/name_recycler_view" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/add_button" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submit_button" app:layout_constraintStart_toEndOf="@+id/name_recycler_view"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/name_recycler_view"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toBottomOf="@+id/name_recycler_view"
            android:text="@string/devide" android:fitsSystemWindows="false"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/number_text" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/name_text" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:maxLength="1"
            android:hint="@string/group_num"/>

</androidx.constraintlayout.widget.ConstraintLayout>